@@ -13,6 +13,9 @@
 				<a href="#ReleaseNotesforSirius">Release Notes for Sirius</a>
 				<ol style="list-style: disc;">
 					<li>
+						<a href="#sirius6.4.2">Changes in Sirius 6.4.2</a>
+					</li>
+					<li>
 						<a href="#sirius6.4.1">Changes in Sirius 6.4.1</a>
 					</li>
 					<li>
@@ -143,6 +146,8 @@
 		<p>This document contains the release notes for recent major releases of Sirius. See also 
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
+		<h2 id="sirius6.4.2">Changes in Sirius 6.4.2</h2>
+		<p>This is service release with only bug fixes and minor improvements related to the new copy/paste format API introduced in 6.4.0.</p>
 		<h2 id="sirius6.4.1">Changes in Sirius 6.4.1</h2>
 		<p>This is service release to fix two issues which were not detected in time for 6.4.0. The issues only impact a new API which was introduced in 6.4.0 (Bug 563117 - 
 			<em>Copy format to existing/new diagram based on source to target semantic elements mapping</em>).
