@@ -4,6 +4,10 @@ h1. Release Notes for Sirius
 
 This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.
 
+h2(#sirius6.4.2). Changes in Sirius 6.4.2
+
+This is service release with only bug fixes and minor improvements related to the new copy/paste format API introduced in 6.4.0.
+
 h2(#sirius6.4.1). Changes in Sirius 6.4.1
 
 This is service release to fix two issues which were not detected in time for 6.4.0. The issues only impact a new API which was introduced in 6.4.0 (Bug 563117 - _Copy format to existing/new diagram based on source to target semantic elements mapping_).
